--- a/celtic_couple_blog/celtic_couple_blog/templates/base.html
+++ b/celtic_couple_blog/celtic_couple_blog/templates/base.html
@@ -32,7 +32,7 @@
 
     <!-- Font Awesome for Additional Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Custom Global CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% block extra_css %}
